# tryniq

./: .gitignore  CLAUDE.md  Makefile  README.md
.claude/agents/: acceptance.md  debugger.md  evals.md  planner.md  qa.md  reviewer.md  security.md
.claude/rules/: backend-architecture.md  backend-data.md  backend-infra.md  backend-style.md  backend-tests.md  frontend-architecture.md  frontend-data.md  frontend-infra.md  frontend-style.md  frontend-tests.md
.claude/skills/: README.md
.claude/skills/commit/: SKILL.md
.claude/skills/create-branch/: SKILL.md
.claude/skills/open-pr/: SKILL.md
.claude/skills/prepare-branch/: SKILL.md
.github/: pull_request_template.md
backend/: .dockerignore  .env.example  CLAUDE.md  CONSTITUTION.md  Dockerfile  Makefile  compose.yml  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_enable_pgvector.py  0002_create_meeting.py  0003_create_meeting_room.py  0004_participant_and_utterance.py  0005_graph.py  0006_meeting_upload_statuses.py  0007_chat_and_utterance_embeddings.py  0008_meeting_metadata.py
backend/app/: config.py  db.py  logger.py  main.py  tasks.py
backend/app/asr/: config.py  constants.py  dependencies.py  interface.py  model_handler.py  router.py  schemas.py  service.py  session.py  tasks.py  types.py
backend/app/asr/clients/: final.py  live.py  parakeet.py  whisper.py  worker_session.py
backend/app/asr/services/: final.py  live.py
backend/app/audio/: dependencies.py  exceptions.py  router.py  schemas.py  service.py
backend/app/chat/: config.py  constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  tasks.py
backend/app/chat/clients/: context_builder.py  prompt_builder.py  responder.py  retriever.py
backend/app/chat/services/: chat.py  context_builder.py  graph_hits.py  prompt_builder.py  responder.py  retrieval.py  streaming.py
backend/app/core/: base_schema.py  client.py  config.py  constants.py  database.py  decorators.py  exceptions.py
backend/app/export/: constants.py  dependencies.py  router.py  schemas.py
backend/app/export/services/: export.py  filename_builder.py  markdown_renderer.py  md_render.py
backend/app/graph/: config.py  constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  tasks.py
backend/app/graph/clients/: embeddings.py  extractor.py
backend/app/graph/services/: dedup.py  graph.py  operations.py  registry.py
backend/app/ingest/: client.py  config.py  constants.py  dependencies.py  router.py  schemas.py  service.py  wav_writer.py
backend/app/ingest/clients/: minio.py  wav_writer.py
backend/app/meeting/: client.py  config.py  constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  stream.py
backend/app/meeting/routers/: event.py  meeting.py
backend/app/meeting/services/: lifecycle_socket.py  meeting.py  stream_subscriber.py
backend/app/metadata/: config.py  constants.py  dependencies.py  router.py  schemas.py  tasks.py
backend/app/metadata/services/: extractor.py  graph_index.py  metadata.py  orchestrator.py  reader.py  references.py  related_finder.py  writer.py
backend/app/participant/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/app/search/: constants.py  dependencies.py  router.py  schemas.py  service.py
backend/app/transcript/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/upload/: config.py  constants.py  dependencies.py  exceptions.py  router.py  schemas.py  service.py  tasks.py  types.py
backend/app/upload/clients/: diarization.py  ffmpeg.py
backend/scripts/: generate_test_meeting.py  simulate_meeting.py
docs/: PRD.md  architecture.excalidraw  google-meet-dom.html  phase-1-spec.md
evals/: DATASETS.md  MODEL_CARD.md  Makefile  README.md  RESULTS.md  RUNBOOK.md  pyproject.toml
evals/docker/: Dockerfile  README.md  compose.yml
evals/envs/cuda/: pyproject.toml
evals/envs/cuda/adapter/: canary_qwen.py  faster_whisper.py  whisper_live.py
evals/envs/diarizen/: pyproject.toml
evals/envs/diarizen/adapter/: diarizen.py
evals/envs/faster-whisper/: pyproject.toml
evals/envs/faster-whisper/adapter/: faster_whisper.py
evals/envs/mlx/: pyproject.toml
evals/envs/mlx/adapter/: _base.py  parakeet_mlx.py
evals/envs/moonshine/: pyproject.toml
evals/envs/moonshine/adapter/: moonshine.py
evals/envs/pyannote/: pyproject.toml
evals/envs/pyannote/adapter/: _base.py  ecapa_speechbrain.py  pyannote_diar.py  reverb_diarization.py
evals/envs/streamer/: pyproject.toml
evals/envs/streamer/adapter/: fluid_audio.py
evals/src/eval/: __init__.py  cli.py  decoding.py  diar_runner.py  manifest.py  paths.py  registry.py  report.py  runner.py  types.py
evals/src/eval/metrics/: der.py  latency.py  memory.py  rtf.py  streaming.py  wer.py
extension/: manifest.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
extension/scripts/: build.mjs
extension/src/: audio-worklet.d.ts  audio-worklet.ts  background.ts  constants.ts  content.ts  dom-observer.ts  injected.ts  meeting-api.ts  settings.ts  speaker-naming.ts  state-publisher.ts  stream-manager.ts  tab-detection.ts  track-attacher.ts  types.ts  voice-activity-detector.ts  webrtc-patch.ts  websocket-client.ts
extension/src/popup/: icons.tsx  index.html  popup.css  popup.tsx
frontend/: .dockerignore  CLAUDE.md  CONSTITUTION.md  Dockerfile  biome.json  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: chat-client.tsx  page.tsx
frontend/src/app/extension/: page.tsx
frontend/src/lib/: config.ts  format.ts  store.ts  types.ts  utils.ts
streamer/: .env.example  CLAUDE.md  CONSTITUTION.md  Makefile  Package.resolved  Package.swift
streamer/src/: AsrConfigBuilder.swift  BackendSocket.swift  BinaryAudioFrame.swift  EnvLoader.swift  Messages.swift  PCMBufferDecoder.swift  SessionManager.swift  SpeakerTranscriber.swift  TranscriptPublisher.swift  TranscriptTiming.swift  main.swift
(+113 files in other folders)
