[project]
name = "tryniq"
version = "0.1.0"
description = "tryniq - open-source meeting intelligence platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=13.2.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "greenlet>=3.3.2",
    "psycopg[binary]>=3.3.3",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "redis>=7.3.0",
    "sqlmodel>=0.0.37",
    "structlog>=25.5.0",
    "taskiq>=0.12.1",
    "taskiq-redis>=1.2.2",
    "pgvector>=0.3",
    "uvicorn>=0.42.0",
    "websockets>=14.0",
    "types-aiobotocore-s3>=3.5.0",
    "faster-whisper>=1.0.3",
    "numpy>=1.26",
]

[project.optional-dependencies]
mlx = [
    "parakeet-mlx>=0.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "C", "N", "I", "B", "Q", "T", "UP"]

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["F401"]
