[project]
name = "tryniq"
version = "0.1.0"
description = "tryniq - open-source meeting intelligence platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.5.0",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "greenlet>=3.5.3",
    "psycopg[binary]>=3.3.4",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.1",
    "sqlmodel>=0.0.39",
    "structlog>=26.1.0",
    "taskiq>=0.12.4",
    "taskiq-redis>=1.2.3",
    "pgvector>=0.5.0",
    "uvicorn>=0.51.0",
    "websockets>=16.1",
    "types-aiobotocore-s3>=3.7.0",
    "faster-whisper>=1.2.1",
    "numpy>=2.5.1",
    "onnxruntime>=1.27.0",
    "openai>=2.45.0",
    "python-multipart>=0.0.32",
    "langfuse>=4.14.0",
]

[project.optional-dependencies]
mlx = [
    "parakeet-mlx>=0.3.0",
]
# Diarization is provided by DiariZen (BUT-FIT). Installed manually — DiariZen ships
# its own forked pyannote-audio in-tree, and upstream PyPI pyannote.audio is NOT
# compatible. Local install:
#   git clone https://github.com/BUTSpeechFIT/DiariZen /tmp/DiariZen
#   uv pip install "torch==2.6.0" "torchaudio==2.6.0" "numpy<2" "accelerate"
#   uv pip install /tmp/DiariZen/pyannote-audio /tmp/DiariZen
# Backend gracefully falls back to single-cluster if any of the above is missing.

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "C", "N", "I", "B", "Q", "T", "UP"]

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["F401"]
"scripts/*.py" = ["T201"]
