[project]
name = "tryniq-evals"
version = "0.1.0"
description = "Model-card harness for the Open Voice Notetaker challenge — ASR + diarization comparison on M4 16GB."
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "jiwer>=3.0",
    "whisper-normalizer>=0.0.11",
    "soundfile>=0.12",
    "numpy>=1.26",
    "pandas>=2.2",
    "psutil>=6.0",
    # Pinned <4 because datasets 4.x switched the Audio feature to torchcodec for
    # decoding, which needs system FFmpeg dev libs to build wheels. The 3.x line
    # uses soundfile directly — fits our soundfile-based runner without extra deps.
    "datasets>=3.0,<4.0",
    "huggingface-hub>=0.25",
    "pydantic>=2.8",
    "pyannote.metrics>=3.2",
]

[project.scripts]
eval = "eval.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eval"]

[tool.ruff]
line-length = 100
target-version = "py313"
