[project]
name = "tryniq-evals-cuda"
version = "0.1.0"
description = "Adapter env for CUDA 12.x hosts: NVIDIA Canary-Qwen-2.5B (NeMo) + WhisperLive."
# NeMo + WhisperLive both pin numpy<2 and prefer 3.10–3.12.
requires-python = ">=3.10,<3.13"
dependencies = [
    "nemo-toolkit[all]>=2.0",
    "whisper-live>=0.7",
    "faster-whisper>=1.0",
    "soundfile>=0.12",
    "numpy<2",
    "websockets>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adapter"]
