[project]
name = "tryniq-evals-diarizen"
version = "0.1.0"
description = "Adapter env for DiariZen (BUTSpeechFIT, EEND-style diarization)."
requires-python = ">=3.10,<3.13"
# DiariZen requires its own modified pyannote-audio that ships in a subdirectory of
# the same git repo. Pinned versions mirror upload/clients/diarization.py in production.
dependencies = [
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "numpy<2",
    "accelerate",
    "toml",
    "soundfile>=0.12",
    "pyannote-audio @ git+https://github.com/BUTSpeechFIT/DiariZen.git@main#subdirectory=pyannote-audio",
    "diarizen @ git+https://github.com/BUTSpeechFIT/DiariZen.git@main",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adapter"]
